2011-09-30  Tomas Mraz  <tm@t8m.info>

	* doc/man/pam.conf-syntax.xml: Improve documentation of the
	sufficient and requisite control values. (Red Hat Bug #742413)

2011-08-25  Tomas Mraz  <tm@t8m.info>

	* modules/pam_access/pam_access.c (user_match): Fix the split
	on @ in the user field. (Red Hat Bug #732081)

	* modules/pam_loginuid/pam_loginuid.c: Correct the FSF address.

2011-08-23  Tomas Mraz  <tm@t8m.info>

	* modules/pam_env/pam_env.c (_pam_parse): Fix missing dereference.

2011-06-22  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.1.4

	* configure.in: Bump version number.
	* NEWS: Document changes since 1.1.3
	* libpam/Makefile.am: Bump release number of shared library
	* po/de.po: Translate new string.

	* modules/pam_unix/Makefile.am (pam_unix_la_LIBADD): Reorder
	Libraries.

2011-06-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_limits/pam_limits.c: Add set_all option,
	read limits from PID one if no limit is specified and set_all
	is set.
	* modules/pam_limits/pam_limits.8.xml: Document set_all option.
	Based on Patch by Kees Cook.

2011-06-15  Tomas Mraz  <tm@t8m.info>

	* modules/pam_sepermit/pam_sepermit.c (check_running): Avoid
	leaking memory and dir handle on realloc failure.
	(sepermit_unlock): Cast fcntl() and close() calls to void.

	* modules/pam_pwhistory/opasswd.c (check_old_password): Do not
	needlessly call strdupa().
	(save_old_password): Avoid memleaks in error paths. Avoid memleak of
	buf. Make the opasswd entry parsing more robust.
	* modules/pam_pwhistory/pam_pwhistory.8.xml: Document the
	special meaning of remember=0.

	* modules/pam_unix/support.c (_set_ctrl): Do not crash when remember,
	minlen, or rounds options are used with wrong module type.

	* modules/pam_timestamp/pam_timestamp.c (pam_sm_authenticate): Avoid
	memleak in error path.
	(pam_sm_open_session): Avoid memleak and fd leak in error path.

	* modules/pam_access/pam_access.c (user_match): Initialize the
	fake_item from item.
