@@ -1,3 +1,13 @@
+2011-10-10  Tomas Mraz  <tm@t8m.info>
+
+	* modules/pam_access/pam_access.c: Add hostname resolution
+	cache.
+	(user_match): Clear the cache in fake_item.
+	(from_match): If from is not hostname, do not try to resolve it.
+	Cache the getaddrinfo() result.
+	(network_netmask_match): Cache the getaddrinfo() result.
+	(pam_sm_authenticate): Free the getaddrinfo() result.
+
 2011-09-30  Tomas Mraz  <tm@t8m.info>
 
 	* doc/man/pam.conf-syntax.xml: Improve documentation of the
